fixed z-index of header

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 
 .App {
   display: grid;
-  grid-template-areas: "sidebar header" "sidebar main";
   grid-template-columns: 1fr 2.3fr;
   grid-template-rows: 120px 1fr;
-  min-height: 208vh;
+  min-height: 255vh;
   background-color: rgb(72, 80, 97);
 }
 
 h1 {
   width: 100%;
+  z-index: 1;
   padding-top: 70px;
   margin-top: 0px;
   padding-bottom: 30px;
